# AI_huntbug_tool

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  scheduler.py
recon-auto/: .env.example  CHANGELOG.md  check_tools.py  main.py  requirements.txt  scheduler.py
recon-auto/config/: targets.example.yaml  targets.yaml
recon-auto/core/: metrics.py  safeguards.py
recon-auto/core/ai/: report_gen.py  triage.py
recon-auto/core/monitor/: delta.py
recon-auto/core/plugins/: base.py  loader.py
recon-auto/core/recon/: js_analysis.py  param_discovery.py  passive_sources.py  subdomain.py  url_collection.py  web_analysis.py  wordlist_gen.py
recon-auto/core/scan/: fuzzer.py  git_exposure.py  nuclei_runner.py  port_scanner.py  sqli_scanner.py  takeover_scanner.py  web_vulns.py
recon-auto/db/: knowledge_graph.py  models.py  queries.py
recon-auto/plugins/: example_plugin.py
recon-auto/tests/: test_knowledge_graph.py  test_report_gen.py  test_safeguards.py  test_subdomain.py  test_triage.py
