[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "recon-auto"
version = "1.0.0"
description = "AI-Powered Bug Bounty Automation Framework"
authors = [
    { name = "PhucQuan", email = "yourmail@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

keywords = ["bug-bounty", "security", "recon", "automation", "pentesting"]

dependencies = [
    # Core
    "rich>=13.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",

    # Database
    "aiosqlite>=0.20.0",

    # AI
    "anthropic>=0.25.0",

    # Scheduler
    "APScheduler>=3.10.0",

    # Scraping / Parsing
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # Report Export
    "reportlab>=4.0.0",
    "weasyprint>=61.0",
    "jinja2>=3.1.0",

    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
recon-auto = "main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
